updated bio, personal details and added profile pic

--- a/views/index.pug
+++ b/views/index.pug
@@ -5,10 +5,10 @@ block content
   article.portfolio-intro
 
     //- Replace with your own heading like 'My Portfolio', or 'Hey, Potential Employers', or 'Let's make the web great together!' 
-    h1 Heading
+    h1 My Portfolio or: How I Learned to Stop Worrying and Love to Code 
 
     //- Replace with a description for your portfolio, what this project is, it's purpose, what it's supposed to accomplish, etc. 
-    p Portfolio description
+    p Thanks for your time. Please enjoy my portfolio. I have selected the following projects to show you a taste of who I am and what I can accomplish.
 
 
   article.portfolio-project-thumbs
