--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,17 +14,17 @@ html(lang="en" dir="ltr")
       .sidebar-info-box
         br
         .thumbnail-box
-          img.thumbnail(src='https://placehold.it/550x350', alt='')
+          img.thumbnail(src='static/img/jason_profile_pic.jpg', alt='')
         .dev-intro-box
 
           //- Replace with your name
-          h5 Name
+          h5 Jason Ziegler
 
           //- Replace with description of who you are, what you do, and why you are so awesome
-          p Description
+          p Loving husband and father of two beautiful children. A junior Full-Stack Javascript who loves nature and technology. 
 
           //- Add path from your '/about' route handler to the href below
-          a(href='') Learn More &rarr;
+          a(href='/about') Learn More &rarr;
 
     .wrapper
       .header
