--- a/views/about.pug
+++ b/views/about.pug
@@ -12,7 +12,7 @@ block content
       .about-intro-box.box
 
         //- Replace with your name
-        h1 Name
+        h1 Jason Ziegler
 
         //- Feel free to personalize the title below
         p Full Stack JavaScript Developer
@@ -21,7 +21,7 @@ block content
         .about-bio
 
           //- Replace the boilerplate below with your best elevator pitch
-          p This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position. 
+          p Hi, I'm Jason, thanks for viewing my personal portfolio. I'm a JavaScript Full-Stack developer who specializes in Node and Express apps. I have studied at Treehouse and Udemy. I am most interested in working with startups and am looking for opportunities that are more focused on helping people improve their productivity and relationships.
 
 
       .skills-contact-box.box
@@ -45,13 +45,13 @@ block content
 
         //- Replace with your own contact info - feel free to use fake information if you prefer
         ul
-          li 555-555-1234
-          li email@email.com
+          li 512-698-6854
+          li hello@jasonmziegler.tech
 
         //- Add URLs to the hrefs below to link to your social media accounts - feel free to use non-personal links to social media home pages if you prefer
-        a.btn-link(href='') LinkedIn
-        a.btn-link(href='') GitHub
-        a.btn-link(href='') Twitter
+        a.btn-link(href='https://www.linkedin.com/in/jason-ziegler-4576523b/') LinkedIn
+        a.btn-link(href='https://github.com/jasonmziegler') GitHub
+        a.btn-link(href='https://twitter.com/Jasonmziegler') Twitter
 
     nav.nav
       a(href='/')
