--- a/views/about.pug
+++ b/views/about.pug
@@ -49,9 +49,9 @@ block content
           li hello@jasonmziegler.tech
 
         //- Add URLs to the hrefs below to link to your social media accounts - feel free to use non-personal links to social media home pages if you prefer
-        a.btn-link(href='https://www.linkedin.com/in/jason-ziegler-4576523b/') LinkedIn
-        a.btn-link(href='https://github.com/jasonmziegler') GitHub
-        a.btn-link(href='https://twitter.com/Jasonmziegler') Twitter
+        a.btn-link(href='https://www.linkedin.com/in/jason-ziegler-4576523b/', target='_blank') LinkedIn
+        a.btn-link(href='https://github.com/jasonmziegler', target='_blank') GitHub
+        a.btn-link(href='https://twitter.com/Jasonmziegler', target='_blank') Twitter
 
     nav.nav
       a(href='/')
